--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 		<ul class="navlist">
 			<li><a href="#home" class="active">Home</a></li>
 			<li><a href="#about">About Me</a></li>
-			<li><a href="#services">Services</a></li>
+			<li><a href="#achievements">Achievements</a></li>
 			<li><a href="#portfolio">Portfolio</a></li>
 			<li><a href="#contact">Contact Me</a></li>
 		</ul>
@@ -46,7 +46,8 @@
 			<h3>ML Developer.</h3>
 			<p>ML Developer with 2+ years of experience having interest in <br> Artificial Intelligence, Deep Learning, Blockchain and Web3. </p>
 			<div class="button">
-				<a href="#" class="btn">Say Hello</a>
+				<a href="#contact" class="btn">Say Hello</a>
+			<img src = "self_img.jpg" width = "400px" style = "position: absolute; right: 150px; top: 100px;" >
 				
 			</div>
 		</div>
@@ -55,7 +56,7 @@
 	<!----about section design--->
 	<section class="about" id="about">
 		<div class="about-img">
-			<img src="background2.jpg">
+			<img src="background1.jpg">
 		</div>
 
 		<div class="about-text">
@@ -67,7 +68,7 @@
 	</section>
 
 	<!----service section design--->
-	<section class="services" id="services">
+	<section class="achievements" id="achievements">
 		<div class="main-text">
 			<p>What I have achieved</p>
 			<h2><span>My</span> Achievements</h2>
@@ -103,7 +104,7 @@
 
 			<div class="box">
 				<div class="s-icons">
-					<i class='bx bx-code-alt' ></i>
+					<img src="matlab.png">
 				</div>
 				<h3>MATLAB</h3>
 				<p>Machine Learning with MATLAB</p>
@@ -112,7 +113,7 @@
 			
 			<div class="box">
 				<div class="s-icons">
-					<i class='bx bx-edit-alt' ></i>
+					<img src="matlab.png">
 				</div>
 				<h3>MATLAB</h3>
 				<p>Deep Learning On-ramp with MATLAB</p>
@@ -121,7 +122,7 @@
 
 			<div class="box">
 				<div class="s-icons">
-					<i class='bx bx-edit-alt' ></i>
+					<img src="matlab.png">
 				</div>
 				<h3>MATLAB</h3>
 				<p>Reinforcement On-ramp with MATLAB</p>
@@ -195,18 +196,19 @@
 		<div class="contact-text">
 			<h2>Contact <span>Me!</span></h2>
 			<h4>If You Have Any Project In Your Mind.</h4>
-			<p>I'm a UI/UX Designer - creating bold & brave interface design for companies all across the world.</p>
+			<p>I'm a ML Developer - creating prediction models and real time projects.</p>
 			<div class="list">
-				<li><a href="#">01646895741</a></li>
-				<li><a href="#">hello@gmail.com</a></li>
-				<li><a href="#">Like Share & Subscribe</a></li>
+				<li><a href="#">9416897271</a></li>
+				<li><a href="#">arnavjain5246@gmail.com</a></li>
 			</div>
 
 			<div class="contact-icons">
-				<a href="#"><i class='bx bxl-facebook' ></i></a>
-				<a href="#"><i class='bx bxl-twitter' ></i></a>
-				<a href="#"><i class='bx bxl-instagram-alt' ></i></a>
-				<a href="#"><i class='bx bxl-youtube' ></i></a>
+				<a href="https://www.facebook.com/arnav.jain.96742/"><i class='bx bxl-facebook' ></i></a>
+				<a href="https://twitter.com/ArnavJ5246"><i class='bx bxl-twitter' ></i></a>
+				<a href="https://www.instagram.com/arnav.jain.14/"><i class='bx bxl-instagram-alt' ></i></a>
+				<a href="www.linkedin.com/in/arnavjain14"><i class='bx bxl-linkedin' ></i></a>
+				<a href="https://github.com/arnav5246"><i class='bx bxl-github' ></i></a>
+				<a href="https://www.hackerrank.com/aj6905"><i class='bx bxl-hackerrank' ></i></a>
 			</div>
 		</div>
 
